@@ -81,6 +81,7 @@ t/90-release-perlcritic.t
 t/91-release-pod-syntax.t
 t/92-release-pod-coverage.t
 t/93-release-spelling.t
+xt/arithmod.pl
 xt/bench-random-bytes.pl
 xt/create-standalone.sh
 xt/calculate-mr-probs.pl
