@@ -25,6 +25,9 @@ Revision history for Perl module Math::Prime::Util::GMP
 
     - ei > 100 called euler constant with incorrect precision.
 
+    - divmod (a,0,1) = 0, to match MPU, Pari, and Math::BigInt.
+      divmod (a,1,n) = a mod n.  It was returning 0 in some cases.
+
     [PERFORMANCE]
 
     - The first 100 Bernoulli numbers are cached, and more will be cached
